<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.soklet</groupId>
    <artifactId>soklet</artifactId>
    <version>2.0.2</version>
    <packaging>jar</packaging>
    <name>Soklet</name>
    <description>A zero-dependency HTTP 1.1 server and routing library for Java, well-suited for building RESTful APIs and broadcasting Server-Sent Events.</description>
    <url>https://www.soklet.com</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Mark Allen</name>
            <email>mark@revetware.com</email>
            <organization>Revetware LLC</organization>
            <organizationUrl>https://www.revetware.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:soklet/soklet.git</connection>
        <developerConnection>scm:git:git@github.com:soklet/soklet.git</developerConnection>
        <url>git@github.com:soklet/soklet.git</url>
    </scm>

    <distributionManagement>
        <repository>
            <name>Central Portal Snapshots</name>
            <id>central-portal-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <release>17</release>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                    <!-- Maven compiler plugin discovers Soklet's internal annotation processor
                        and tries to apply it to itself...prevent that here -->
                    <proc>none</proc>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <configuration>
                    <links>
                        <link>https://docs.oracle.com/en/java/javase/25/docs/api/</link>
                        <link>https://javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.2/</link>
                        <link>https://javadoc.io/doc/org.jspecify/jspecify/1.0.0/</link>
                    </links>
                    <quiet>true</quiet>
                    <notimestamp>true</notimestamp>
                    <encoding>UTF-8</encoding>
                    <docencoding>UTF-8</docencoding>
                    <charset>UTF-8</charset>
                    <excludePackageNames>com.soklet.internal.microhttp:com.soklet.internal.spring:com.soklet.internal.util</excludePackageNames>
                    <additionalOptions>
                        <additionalOption>-XDignore.symbol.file</additionalOption>
                        <additionalOption>-Xdoclint:-html</additionalOption>
                    </additionalOptions>
                    <linksource>true</linksource>
                    <show>public</show>
                    <bottom><![CDATA[Copyright 2015-2022 <a href="https://www.xmog.com" target="_blank">Transmogrify LLC<a>, 2022-2026 <a href="https://www.revetware.com" target="_blank">Revetware LLC<a>.]]></bottom>
                    <source>17</source>
                    <failOnError>true</failOnError>
                    <overview>${basedir}/src/main/javadoc/overview.html</overview>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central-portal</publishingServerId>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.8</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>
                        --enable-native-access=ALL-UNNAMED
                        --sun-misc-unsafe-memory-access=allow
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- Compile-time-only deps -->
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>1.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
            <scope>provided</scope>
        </dependency>

        <!-- Testing-only deps -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.13.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.testing.compile</groupId>
            <artifactId>compile-testing</artifactId>
            <version>0.23.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>